gcc/testsuite/rust/rustc/ui/parser/raw/raw-byte-string-eof.rs
pub fn main() {
    br##"a"#;  // { dg-error ".E0748." "" { target *-*-* } }
}

